added main iamge

--- a/layouts/partials/home.html
+++ b/layouts/partials/home.html
@@ -1,11 +1,5 @@
 <section class="container centered">
   <div class="about">
-    <h1>{{ .Site.Params.author }} - {{ .Site.Params.info }}</h1>
-    <img src='/images/black_hole.gif' style='width: 40%'/>
-    <ul>
-      {{ range sort .Site.Params.social }}
-      <li><a href="{{ .url }}">{{ .name }}</a></li>
-      {{ end }}
-    </ul>
+    <a href='/information'><img src='/images/itp_outer_space.gif' style='width: 80%'/></a>
   </div>
 </section>
