added promposal and gifs

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -40,7 +40,10 @@
 
     </main>
 
+    <script type='text/javascript' src='/js/index.js' ></script>
+
     {{ template "_internal/google_analytics.html" . }}
+
 
   </body>
 
